<resources>
    <string name="app_name">Associate Exam 1</string>
    <string name="score">0</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="next_activity">Next</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="donut_message">You have ordered donut</string>
    <string name="ice_cream_message">You have ordered ice cream</string>
    <string name="froyo_message">You have ordered froyo</string>
    <string name="order_message">Yo selected order</string>
    <string name="favourite_message">Yo selected favourite</string>
    <string name="status_message">Yo selected message</string>
    <string name="contacts_message">Yo selected contacts</string>

    <string name="night_mode">Night mode</string>
    <string name="day_mode">Day Mode</string>
    <string-array name="phone">
        <item>Home</item>
        <item>Work</item>
        <item>Others</item>
    </string-array>

    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="sports_info_placeholder">Here is some news</string>

    <string-array name="sports_titles">
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Cycling</item>
        <item>Golf</item>
        <item>Running</item>
        <item>Soccer</item>
        <item>Swimming</item>
        <item>Table Tennis</item>
        <item>Tennis</item>
    </string-array>

    <array name="sports_images">
        <item>@drawable/img_baseball</item>
        <item>@drawable/img_badminton</item>
        <item>@drawable/img_basketball</item>
        <item>@drawable/img_bowling</item>
        <item>@drawable/img_cycling</item>
        <item>@drawable/img_golf</item>
        <item>@drawable/img_running</item>
        <item>@drawable/img_soccer</item>
        <item>@drawable/img_swimming</item>
        <item>@drawable/img_tabletennis</item>
        <item>@drawable/img_tennis</item>
    </array>

    <string-array name="sports_info">
        <item>Here is some Baseball news!</item>
        <item>Here is some Badminton news!</item>
        <item>Here is some Basketball news!</item>
        <item>Here is some Bowling news!</item>
        <item>Here is some Cycling news!</item>
        <item>Here is some Golf news!</item>
        <item>Here is some Running news!</item>
        <item>Here is some Soccer news!</item>
        <item>Here is some Swimming news!</item>
        <item>Here is some Table Tennis news!</item>
        <item>Here is some Tennis news!</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab1">Top stories</string>
    <string name="tab2">Sport stories</string>
    <string name="tab3">Entertainment stories</string>
    <string name="title_activity_nav_bar">NavBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_recycler">RecyclerActivity</string>
    <string name="dummyText">Forget it jhj[dvf voijpef iioj[efd]ge egiojg[gek][eg lignj[ekge[ gn[rog[egr ignperogjep[ eogignepenpne npogne[ojge[geponrn ep npoegje-[jhtrpnhepogje[e epoje[geroue4h-t94 3]40,4tvh 5v0yu vhcp v v454</string>


</resources>
